add dag. do not load examples. use shared volume (ugh).

--- a/openshift-applier/templates/airflow-deploy.yml
+++ b/openshift-applier/templates/airflow-deploy.yml
@@ -57,6 +57,8 @@ objects:
         - env:
           - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
             value: ${POSTGRES_CONNECTION}
+          - name: AIRFLOW__CORE__LOAD_EXAMPLES
+            value: "False"
           image: "${NAME}"
           imagePullPolicy: Always
           livenessProbe:
