--- a/openshift-applier/inventory/host_vars/airflow.yml
+++ b/openshift-applier/inventory/host_vars/airflow.yml
@@ -26,7 +26,7 @@ airflow:
       VOLUME_CAPACITY: 2Gi
     scheduler:
       NAME: "{{ airflow_scheduler_name }}"
-      PVC_NAME: "{{ airflow_scheduler_name }}"
+      PVC_NAME: "{{ airflow_webserver_name }}"
       VOLUME_CAPACITY: 2Gi
 
 openshift_cluster_content:
