--- a/openshift-applier/templates/scheduler-deploy.yml
+++ b/openshift-applier/templates/scheduler-deploy.yml
@@ -57,6 +57,8 @@ objects:
         - env:
           - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
             value: ${POSTGRES_CONNECTION}
+          - name: AIRFLOW__CORE__LOAD_EXAMPLES
+            value: "False"
           image: "${NAME}"
           imagePullPolicy: Always
           livenessProbe:
@@ -88,7 +90,7 @@ objects:
         volumes:
         - name: ${NAME}-vol
           persistentVolumeClaim:
-            claimName: ${NAME}-vol
+            claimName: ${PVC_NAME}-vol
     test: false
     triggers:
     - type: ConfigChange
