add project creation with single node deploy. update Readme. remove liveness probe for scheduler. add readiness probe for webserver.

--- a/openshift-applier/apply.yml
+++ b/openshift-applier/apply.yml
@@ -1,3 +1,9 @@
+- name: Create Projects and Policies
+  hosts: projects
+  tasks:
+    - include_role:
+        name: openshift-applier/roles/openshift-applier
+
 - name: Deploy OpenShift-Applier Inventory
   hosts: seed-hosts[0]
   tasks:
